--- a/MFCSerial.vcxproj
+++ b/MFCSerial.vcxproj
@@ -184,6 +184,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CMycomm.h" />
+    <ClInclude Include="Controller.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MFCSerial.h" />
     <ClInclude Include="MFCSerialDlg.h" />
@@ -193,6 +194,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMycomm.cpp" />
+    <ClCompile Include="Controller.cpp" />
     <ClCompile Include="MFCSerial.cpp" />
     <ClCompile Include="MFCSerialDlg.cpp" />
     <ClCompile Include="pch.cpp">
