--- a/MFCSerial.vcxproj.filters
+++ b/MFCSerial.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="CMycomm.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Controller.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCSerial.cpp">
@@ -48,6 +51,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CMycomm.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Controller.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
